# crias

./: Makefile  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml  test.yml
crias/: llms.py  prompts.py
examples/: chatcompletion.py
tests/: test_llms.py  test_prompts.py
